Finally, Before Deployment